# MiniCrit-7B

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  MANIFEST.in  README.md  WHITEPAPER.md  analyze_local.py  cliff.toml  docker-compose.yml  pyproject.toml  requirements.txt  train_minicrit_7b.py  training_utils.py
.claude/commands/: auto.md  commit-push-pr.md  gen-training-data.md  simplify.md  teleport.md  verify.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  release.yml
configs/: 7b_lora.yaml  claude_desktop_config.json  deepspeed_gh200.json
docker/: .env.example  Dockerfile  docker-compose.yml  requirements-cpu.txt  requirements.txt
docs/: DEPLOYMENT_GUIDE.md  MODEL_EXCELLENCE_GUIDE.md  api-reference.md
gitops/argocd/: application-dev.yaml  application.yaml  appproject.yaml
helm/minicrit/: Chart.yaml  values.yaml
helm/minicrit/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
k8s/overlays/dev/: deployment-patch.yaml  hpa-patch.yaml  ingress-patch.yaml  kustomization.yaml
k8s/overlays/prod/: deployment-patch.yaml  hpa-patch.yaml  ingress-patch.yaml  kustomization.yaml  pdb-patch.yaml
langchain_minicrit/: __init__.py  callbacks.py  chat.py  llm.py  validator.py
minicrit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
minicrit_7b_output/checkpoint-30000/: rng_state.pth  trainer_state.json
minicrit_7b_output/checkpoint-32000/: rng_state.pth  trainer_state.json
minicrit_7b_output/checkpoint-34000/: adapter_config.json  rng_state.pth  trainer_state.json
monitoring/: README.md  docker-compose.yml  grafana-dashboard.json  prometheus.yml
monitoring/alertmanager/: alerts.yaml
monitoring/grafana-provisioning/dashboards/: default.yml
monitoring/grafana/dashboards/: minicrit-overview.json
scripts/: train_vista.slurm  vista_setup.sh
src/: __init__.py  api.py  budget.py  cli.py  config.py  data.py  evaluation.py  health.py  logging_config.py  metrics.py  model.py  openai_compat_server.py  rate_limiting.py  security.py  tracing.py  training.py
src/benchmark/: __init__.py  benchmark_models.py
src/mcp/: __init__.py  core.py  server.py  server_http.py  server_prod.py
src/training/: __init__.py  generate_dpo_data.py  generate_hard_examples.py  train_dpo.py
terraform/aws/: main.tf  terraform.tfvars.example  variables.tf
terraform/azure/: main.tf  variables.tf
terraform/gcp/: main.tf  variables.tf
tests/: __init__.py  conftest.py  test_api.py  test_budget.py  test_evaluation.py  test_health.py  test_input_sanitization.py  test_langchain_integration.py  test_logging_config.py  test_mcp_core.py  test_metrics.py  test_openai_compat.py  test_rate_limiting.py  test_security.py  test_src_modules.py  test_tracing.py  test_train_minicrit.py  test_training_utils.py
tests/load/: README.md  k6_test.js  locustfile.py
