# ================================================================
# MiniCrit - PyPI Package Configuration
# Antagon Inc. | CAGE: 17E75 | UEI: KBSGT7CZ4AH3
# Co-Founder & CEO: William Alexander Ousley (Alex Ousley)
# Co-Founder & CTO: Jacqueline Villamor Ousley (Jacque Ousley) TS/SCI
# ================================================================

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minicrit"
version = "0.1.1"
description = "Adversarial AI validation for autonomous systems - catch reasoning flaws before they become failures"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "William Alexander Ousley", email = "founders@antagon.ai"},
    {name = "Jacqueline Villamor Ousley", email = "founders@antagon.ai"},
]
maintainers = [
    {name = "Antagon Inc.", email = "founders@antagon.ai"},
]
keywords = [
    "ai-safety",
    "adversarial-ai",
    "llm",
    "validation",
    "trading",
    "defense",
    "reasoning",
    "critique",
    "mcp",
    "model-context-protocol",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Security",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "accelerate>=0.25.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]
server = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-jose>=3.3.0",
]
redis = [
    "redis>=5.0.0",
]
observability = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-httpx>=0.41b0",
]
training = [
    "datasets>=2.16.0",
    "wandb>=0.16.0",
    "trl>=0.7.0",
    "anthropic>=0.18.0",
]
eval = [
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]
all = [
    "minicrit[mcp,server,training,eval,redis,observability]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://antagon.ai"
Documentation = "https://github.com/antagoninc/MiniCrit-7B/tree/main/docs"
Repository = "https://github.com/antagoninc/MiniCrit-7B"
Issues = "https://github.com/antagoninc/MiniCrit-7B/issues"
Changelog = "https://github.com/antagoninc/MiniCrit-7B/blob/main/CHANGELOG.md"

[project.scripts]
minicrit = "minicrit.cli:main"
minicrit-server = "minicrit.mcp.server_http:main"

[project.entry-points."mcp.servers"]
minicrit = "minicrit.mcp.server:main"

[tool.setuptools]
packages = ["minicrit", "minicrit.mcp", "minicrit.benchmark", "minicrit.training"]
package-dir = {"minicrit" = "src"}

[tool.setuptools.package-data]
minicrit = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing --cov-report=xml --cov-report=html"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/benchmark/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
fail_under = 30
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
